<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7FBFDC"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="309dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="33dp"
        android:contentDescription="@string/Button1"
        android:src="@drawable/weather_app_transparent"
        app:layout_constraintBottom_toTopOf="@+id/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/student"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/textView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/viewWeather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student" />

    <Button
        android:id="@+id/viewWeather"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/brown"
        android:text="@string/Button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/exit"
        android:layout_width="114dp"
        android:layout_height="56dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/brown"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewWeather"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>