<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7FBFDC"
    tools:context=".Weather1">

    <TextView
        android:id="@+id/min"
        android:layout_width="107dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="29dp"
        android:text="@string/min"
        app:layout_constraintBottom_toTopOf="@+id/weather"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max1"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/Detail"
        android:layout_width="172dp"
        android:layout_height="66dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#A69E5A"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/view_details"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ExitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="111dp"
        android:layout_height="64dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="#A69E5A"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/ExitButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Detail"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/days"
        android:layout_width="122dp"
        android:layout_height="34dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:text="@string/day"
        app:layout_constraintBottom_toTopOf="@+id/max1"
        app:layout_constraintEnd_toStartOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/max1"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/max1"
        app:layout_constraintBottom_toTopOf="@+id/min"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="128dp"
        android:layout_height="27dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/weather"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/days"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weather"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/max1"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/min"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="22dp"
        android:text ="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="223dp"
        android:layout_height="146dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="23dp"
        android:background="#74FBF8F8"
        android:backgroundTint="#F6F0F0"
        app:layout_constraintBottom_toTopOf="@+id/Detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="-20dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>